Add theme for presentation

--- a/landslide.cfg
+++ b/landslide.cfg
@@ -1,4 +1,5 @@
 [landslide]
+theme = getting_started_with_git/theme
 source = getting_started_with_git.markdown
 destination = getting_started_with_git/index.html
 relative = True
