Change landslide settings

--- a/landslide.cfg
+++ b/landslide.cfg
@@ -1,6 +1,6 @@
 [landslide]
 theme = getting_started_with_git/theme
 source = getting_started_with_git.markdown
-destination = getting_started_with_git/index.html
+destination = index.html
 relative = True
 linenos = no
